<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="usserag" translatable="false">Пользовательское соглашение</string>
    <string name="share_intent">Поделиться через</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_media_library">MediaLibraryActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="share_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">parask.ivan@yandex.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="search_hint">"Поиск"</string>

    <!--Errors-->
    <string name="error_not_found">"Ничего не нашлось"</string>
    <string name="error_no_internet1">"Проблемы со связью"</string>
    <string name="error_no_internet2">"Загрузка не удалась. Проверьте подключение к интернету"</string>

</resources>