<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:orientation="vertical">

    <TextView
        style="@style/PlaylistMakerScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/YP_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="28dp">

        <Button
            style="@style/PlaylistMakerMainButton"
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/vector_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_primary" />

        <Button
            style="@style/PlaylistMakerMainButton"
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/media"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/vector_media"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_primary" />

        <Button
            style="@style/PlaylistMakerMainButton"
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settings"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/vector_settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_primary" />

    </LinearLayout>

</LinearLayout>