<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowback"
            app:tint="@color/back_arrow"/>

        <TextView
            style="@style/PlaylistMakerScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/settings"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/master_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/PlaylistMakerSettingsItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/theme"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dark_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/master_padding"
            android:layout_marginTop="@dimen/settings_item_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/PlaylistMakerSettingsItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"/>

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/share"
                    app:tint="@color/text_secondary"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/support_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/master_padding"
            android:layout_marginTop="@dimen/settings_item_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/PlaylistMakerSettingsItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/support"/>

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/support"
                    app:tint="@color/text_secondary"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/agreement_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/master_padding"
            android:layout_marginTop="@dimen/settings_item_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/PlaylistMakerSettingsItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/usserag"/>

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/arrowforward"
                    app:tint="@color/text_secondary"/>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>